--- a/uncharted_phoenix/lib/uncharted_phoenix/components/live_bar.html.leex
+++ b/uncharted_phoenix/lib/uncharted_phoenix/components/live_bar.html.leex
@@ -1,5 +1,5 @@
 <object data-testid="lc-live-bar-component" role="img" aria-label="Bar chart visualizing <%= Chart.title(@chart) %>" alt="Bar chart visualizing <%= Chart.title(@chart) %>">
-  <svg class="bar-chart" aria-labelledby="barChartTitle" aria-describedby="barChartDesc" width="100%" height="100%" viewBox="0 0 600 400" style="overflow: visible;">
+  <svg class="bar-chart" aria-labelledby="barChartTitle" aria-describedby="barChartDesc" width="100%" height="100%" viewBox="0 0 <%= "#{@width} #{@height}" %>" style="overflow: visible;">
 
     <title id="barChartTitle">Bar chart visualizing <%= Chart.title(@chart) %></title>
 
